Fix white space on smaller screens

--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -152,3 +152,18 @@
     font-size: 5rem;
   }
 }
+
+@media screen and (max-width: 399px) {
+  .program i {
+    width: 35px;
+    height: 35px;
+  }
+
+  .program h3 {
+    font-size: 1rem;
+  }
+
+  .program p {
+    font-size: 12px;
+  }
+}
